# Apps-linux-QML

./: README.md
Aprendiendo-Qml-Principios/: CMakeLists.txt  Main.qml  main.cpp  texto.txt
DJ-version-arona/: metadata.desktop  theme.conf
Pruebitas/: .qmlls.ini  CMakeLists.txt  Main.qml  README.MD  Saludo.qml  Saludo_respuesta.qml  holabasico.qml  main.cpp
proyecto-1-1/: CMakeLists.txt  Main.qml  main.cpp
